Updated Dinner Class

--- a/NerdDinner/NerdDinner.csproj
+++ b/NerdDinner/NerdDinner.csproj
@@ -147,12 +147,14 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Dinner.cs" />
     <Compile Include="Models\DinnerRepository.cs" />
     <Compile Include="Models\NerdDinner.designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>NerdDinner.dbml</DependentUpon>
     </Compile>
+    <Compile Include="Models\PhoneValidator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
