added new Views and updated details view

--- a/NerdDinner/NerdDinner.csproj
+++ b/NerdDinner/NerdDinner.csproj
@@ -209,6 +209,7 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Dinners\NotFound.cshtml" />
     <Content Include="Views\Dinners\Details.cshtml" />
+    <Content Include="Views\Dinners\Index.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
