Created a Partial View "DinnerForm" that is called by the create and edit views.

--- a/NerdDinner/NerdDinner.csproj
+++ b/NerdDinner/NerdDinner.csproj
@@ -214,6 +214,7 @@
     <Content Include="Views\Dinners\Create.cshtml" />
     <Content Include="Views\Dinners\Delete.cshtml" />
     <Content Include="Views\Dinners\Deleted.cshtml" />
+    <Content Include="Views\Dinners\DinnerForm.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
